--- a/rangeseekbar/src/main/res/values/attrs.xml
+++ b/rangeseekbar/src/main/res/values/attrs.xml
@@ -26,6 +26,9 @@
         <!-- the height of the bar -->
         <attr name="barHeight"          format="dimension"/>
 
+        <!-- the curve at the edges of the straight line, defaults to 0 -->
+        <attr name="roundedCorners"     format="dimension"/>
+
         <!-- the color of the bar that is not selected -->
         <attr name="defaultColor"       format="color"/>
 
