--- a/rangeseekbar/src/main/res/values/attrs.xml
+++ b/rangeseekbar/src/main/res/values/attrs.xml
@@ -42,6 +42,10 @@
         <attr name="thumbNormal"        format="reference"/>
         <attr name="thumbPressed"       format="reference"/>
         <attr name="thumbDisabled"      format="reference"/>
+
+        <!-- set minimum and maximum labels -->
+        <attr name="minLabel"           format="string"/>
+        <attr name="maxLabel"           format="string"/>
     </declare-styleable>
 
 </resources>
