Upgrade target API to fix issue with roundedCorners attribute

--- a/rangeseekbar-sample/src/main/res/layout/main.xml
+++ b/rangeseekbar-sample/src/main/res/layout/main.xml
@@ -28,7 +28,8 @@
 
         <org.florescu.android.rangeseekbar.RangeSeekBar
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            rsb:roundedCorners="5dp"/>
 
         <TextView
             android:layout_width="fill_parent"
